--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,177 @@
-.App {
-  text-align: center;
+@import url("https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300..800;1,300..800&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap");
+:root {
+  /* fs */
+  --fs-sm: 14px;
+  --fs-xl: 40px;
+  /* color */
+  --off-black: #010101;
+  --off-green: #27aa7e;
+  --off-light-green: #e5f5f0;
+  --off-gray: #4d4d4d;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+.fs-sm {
+  font-size: var(--fs-sm);
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+.fs-xl {
+  font-size: var(--fs-xl);
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
+.ff-sans {
+  font-family: "Open Sans", sans-serif;
+}
+.ff-roboto {
+  font-family: "Roboto", sans-serif;
+}
+.off-black {
+  color: var(--off-black);
+}
+.off-gray {
+  color: var(--off-gray);
+}
+.off-green {
+  color: var(--off-green);
+}
+.off-light-green {
+  color: var(--off-light-green);
+}
+/* line-height */
+.lh-24 {
+  line-height: 24px;
+}
+.lh-25 {
+  line-height: 25.6px;
+}
+
+/* button */
+.feature_btn:hover {
+  background: linear-gradient(89.7deg, #27aa7e 0.25%, #004a6d 99.79%);
   color: white;
+  box-shadow: 0px 4px 30.1px 0px #00000012;
+}
+.feature_btn {
+  transition: all 400ms linear;
+  padding: 9.5px 23.5px 9.5px 23.5px;
+  border-radius: 51px;
+  border: 1px solid var(--off-green);
+  background: var(--off-light-green);
+}
+.gap-25 {
+  gap: 25px;
+}
+.gap-14 {
+  gap: 14px;
 }
 
-.App-link {
-  color: #61dafb;
+.mw_469 {
+  max-width: 469px;
+}
+.tickmark_svg {
+  min-width: 24px;
+  min-height: 24px;
+}
+.mobile_phone {
+  max-width: 308px;
+  max-height: 529px;
+}
+.mb-31{
+  margin-bottom: 31px;
+}
+.mobile_bg {
+  max-width: 380px;
+  max-height: 675px;
+  right: 0;
+  bottom: -2%;
+}
+.mw_1060 {
+  max-width: 1060px;
+}
+.tab_btn.tab_1 {
+  background: linear-gradient(89.7deg, #27aa7e 0.25%, #004a6d 99.79%);
+  color: white;
+  -webkit-text-fill-color: white;
+  border-radius: 8px !important;
+  border: 1px solid #27aa7e;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
+.font-gradient {
+  background: linear-gradient(89.66deg, #27aa7e 0.22%, #004a6d 108.11%);
+  background-clip: text;
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;
+}
+.tab_btn {
+  transition: all 400ms linear;
+  padding: 18px 10px 17px 10px;
+  width: 266px;
+  height: 61px;
+  max-width: 100%;
+  border: 1px solid #27aa7e;
+}
+
+.tab_btn {
+  border: unset;
+  background: linear-gradient(89.66deg, #27aa7e 0.22%, #004a6d 108.11%);
+  color: transparent;
+  -webkit-background-clip: text;
+  background-clip: text;
+  position: relative;
+  z-index: 1;
+  transition: all 300ms linear;
+}
+
+.tab_btn::after {
+  border-radius: 8px !important;
+  z-index: -1;
+  transition: all 300ms linear;
+}
+.tab_btn::before {
+  content: "";
+  position: absolute;
+  z-index: -1;
+  top: 0;
+  color: white !important;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  border-radius: 8px;
+  border: 1px solid transparent;
+  background: linear-gradient(89.66deg, #27aa7e 0.22%, #004a6d 108.11%)
+    border-box;
+  -webkit-mask: linear-gradient(#fff 0 0) padding-box, linear-gradient(#fff 0 0);
+  mask: linear-gradient(#fff 0 0) padding-box, linear-gradient(#fff 0 0);
+  -webkit-mask-composite: destination-out;
+  mask-composite: exclude;
+}
+
+@media (min-width: 768px) {
+  :root {
+    /* fs */
+    --fs-sm: 16px;
+    --fs-xl: 48px;
   }
-  to {
-    transform: rotate(360deg);
+  .lh-57 {
+    line-height: 57.6px;
+  }
+  .lh-76 {
+    line-height: 76.8px;
+  }
+  .mobile_phone {
+    max-width: 308px;
+    max-height: 629px;
+  }
+}
+@media (min-width: 1200px) {
+  .mobile_bg {
+    max-width: 618px;
+    max-height: 809px;
+    right: 0;
+    bottom: 1%;
+  }
+}
+@media (min-width: 1400px) {
+  .container {
+    max-width: 1180px !important;
   }
 }
