--- a/src/App.css
+++ b/src/App.css
@@ -2,7 +2,7 @@
 :root {
   /* fs */
   --fs-sm: 14px;
-  --fs-xl: 40px;
+  --fs-xl: 32px;
   /* color */
   --off-black: #010101;
   --off-green: #27aa7e;
@@ -57,8 +57,8 @@
   border: 1px solid var(--off-green);
   background: var(--off-light-green);
 }
-.gap-25 {
-  gap: 25px;
+.tabs_gap {
+  gap: 15px;
 }
 .gap-14 {
   gap: 14px;
@@ -75,7 +75,7 @@
   max-width: 308px;
   max-height: 529px;
 }
-.mb-31{
+.mb-31 {
   margin-bottom: 31px;
 }
 .mobile_bg {
@@ -94,7 +94,9 @@
   border-radius: 8px !important;
   border: 1px solid #27aa7e;
 }
-
+.w-1000 {
+  width: 1000px;
+}
 .font-gradient {
   background: linear-gradient(89.66deg, #27aa7e 0.22%, #004a6d 108.11%);
   background-clip: text;
@@ -107,11 +109,13 @@
   width: 266px;
   height: 61px;
   max-width: 100%;
-  border: 1px solid #27aa7e;
+  border-radius: 8px;
 }
 
 .tab_btn {
   border: unset;
+  border-radius: 8px;
+
   background: linear-gradient(89.66deg, #27aa7e 0.22%, #004a6d 108.11%);
   color: transparent;
   -webkit-background-clip: text;
@@ -146,6 +150,14 @@
 }
 
 @media (min-width: 768px) {
+  :root {
+    --fs-xl: 40px;
+  }
+}
+@media (min-width: 768px) {
+  .tabs_gap {
+    gap: 25px;
+  }
   :root {
     /* fs */
     --fs-sm: 16px;
